[gd_scene load_steps=10 format=3 uid="uid://bycx0utujr7qt"]

[ext_resource type="Script" path="res://prefabs/partygoer/partygoer.gd" id="1_6njh4"]
[ext_resource type="SpriteFrames" uid="uid://cxn82o0kqhfsp" path="res://prefabs/partygoer/partygoer_anims.tres" id="1_pv8j1"]
[ext_resource type="Script" path="res://prefabs/partygoer/character_mover.gd" id="2_tnmw0"]
[ext_resource type="PackedScene" uid="uid://kf8tqdlm8c5t" path="res://addons/vision_cone_2d/vision_cone_2d_template.tscn" id="4_itfhl"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="5_u77gh"]
[ext_resource type="Script" path="res://prefabs/partygoer/states/idle.gd" id="6_mjqa1"]
[ext_resource type="Script" path="res://prefabs/partygoer/states/approaching.gd" id="7_jk8li"]
[ext_resource type="Script" path="res://prefabs/partygoer/states/chatting.gd" id="8_r3y4m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kjoc1"]

[node name="Partygoer" type="CharacterBody2D" groups=["Partiers"]]
script = ExtResource("1_6njh4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_kjoc1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.01, 0.01)
sprite_frames = ExtResource("1_pv8j1")
animation = &"placeholder"

[node name="VisionCone2D" parent="." instance=ExtResource("4_itfhl")]
rotation = 4.71239
angle_deg = 70
max_distance = 250.0

[node name="Components" type="Node" parent="."]

[node name="CharacterMover" type="Node" parent="Components"]
script = ExtResource("2_tnmw0")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_u77gh")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_mjqa1")

[node name="Approaching" type="Node" parent="StateMachine"]
script = ExtResource("7_jk8li")
distance_to_stop = 30.0

[node name="Chatting" type="Node" parent="StateMachine"]
script = ExtResource("8_r3y4m")
boredom_threshold = 15.0

[node name="Timers" type="Node" parent="."]

[node name="ChangeDirectionTimer" type="Timer" parent="Timers"]
wait_time = 2.277

[node name="BoredomTimer" type="Timer" parent="Timers"]

[connection signal="entered_vision_cone" from="VisionCone2D" to="." method="_on_vision_cone_2d_entered_vision_cone"]
[connection signal="exited_vision_cone" from="VisionCone2D" to="." method="_on_vision_cone_2d_exited_vision_cone"]
[connection signal="timeout" from="Timers/ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="timeout" from="Timers/BoredomTimer" to="." method="_on_boredom_timer_timeout"]
